--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 
-#Ver. 0.2.5.1
+#Ver. 0.2.5.1 (d491fa6)
 Change mine_slush to not mess up with a non standard default threshold
 Caught a bug where we didn't store the old_duration
 Fix shortened gh/s output
