--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 
+Updated the pool dictonary to be an array of pool_class objects.
+Made scheduler return an array of valid servers and valid backup servers 
+which are sorted by preference
+Added automatic Coin Profitability based switching.
+
 #Ver. 0.2.5.1
 Change mine_slush to not mess up with a non standard default threshold
 Caught a bug where we didn't store the old_duration
