README en/esp bH url update

--- a/README
+++ b/README
@@ -138,7 +138,7 @@ Known issues with the following browsers: WebKit (Android 2.3.4); Internet Explo
 
 # More help
 
-You can go to https://github.com/c00w/bitHopper/wiki and start reading the bitHopper wiki or ask for help in the oficial forum
+You can go to http://www.bitHopper.org and start reading the bitHopper wiki or ask for help in the oficial forum
 at https://bitcointalk.org/index.php?topic=26866. Join us on Freenode (http://webchat.freenode.net/) #bithopper channel.
 
 
