--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
 
+Made pools sort by coin type then shares.
+Made backup_latehop work how it is supposed to.
+Fixed an output bug with rfc.
+Wallet scraping
+
+
+#Ver .2.5.2
 Updated the pool dictonary to be an array of pool_class objects
 Made scheduler return an array of valid servers and valid backup servers 
  which are sorted by preference
