--- a/README
+++ b/README
@@ -75,6 +75,11 @@ If you don't want to use a pool delete it from "user.cfg" or go to Stats page an
 disable. BitHopper listens on loopback interface so you should direct your miner to localhost:8337
 with any username and password (not blank).
 
+If you would like to use custom settings for pools you can check pools.cfg for examples and put
+settings you would like to overwrite in the same format to pools-custom.cfg. This way you always
+have latest pools.cfg but you can also experiment with new pools or scrape data for existing
+pools from different sources.
+
 # LP tuning / dashboard
 
 LP Workbench: http://localhost:8337/lpworkbench
