Make sure priority is always a int and update changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-
+Coin Profit based mining is disabled by default.
+Priority for pools is added.
 
 #Ver 0.2.5.5 (6900c30)
 Trigger a LP when we change block owners due to new api info
