--- a/README
+++ b/README
@@ -29,6 +29,7 @@ Tested and working in Ubuntu 11.04, 10.10 and 10.04 LTS
 
 
 # Instructions for Windows users
+NOTE: IF YOU ARE RUNNING LOTS OF MINERS USE LINUX.
 
 ActiveState Python(recommended, use 32 bit even when you have 64 bit system)
 http://downloads.activestate.com/ActivePython/releases/2.7.2.5/ActivePython-2.7.2.5-win32-x86.msi
