--- a/README
+++ b/README
@@ -7,23 +7,14 @@ Based on a work at github.com
 
 # Ubuntu installation
 ---------------------------------------------------------------------
-In order to run bitHopper you need to have Python installed on your 
-system. Version 2.7 of Python is suggested although it has been tested
-and appears to work with version 2.6 too. To find out which version of 
-Python your system currently has type "python -V" in a shell console.
 
-If you don't have Python installed at all you have to run:
+Run:
 
-sudo apt-get install python
-
-After verifying that you have Python installed then you have to install some extra packages that bitHopper
-requires to function properly:
-
-sudo apt-get install python-dev python-setuptools
-sudo pip install gevent
-sudo pip install importlib
-
-Then download and run bitHopper
+sudo apt-get install python git python-dev python-setuptools
+sudo pip install gevent importlib
+git clone git://github.com/c00w/bitHopper.git
+cd bitHopper
+python bitHopper.py
 
 Tested and working in Ubuntu 11.04, 10.10 and 10.04 LTS
 
@@ -46,43 +37,28 @@ archlinux. So you have to install from the oficial repo on bitbucket.
 # Instructions for Windows users
 -----------------------------------------------------------------
 NOTE: IF YOU ARE RUNNING LOTS OF MINERS USE LINUX.
+People have done it with miners but linux is a lot more stable and takes less modifications.
 
-ActiveState Python(recommended, use 32 bit even when you have 64 bit system)
-http://downloads.activestate.com/ActivePython/releases/2.7.2.5/ActivePython-2.7.2.5-win32-x86.msi
+Download and install
+1. Python
+http://python.org/ftp/python/2.7.2/python-2.7.2.msi
 
-Greenlet
-http://pypi.python.org/pypi/greenlet
+2. Greenlet
+http://pypi.python.org/packages/2.7/g/greenlet/greenlet-0.3.3.win32-py2.7.exe#md5=d4e5ecb9bf44a6a72ca73d7988994c6e
 
-Although you can download greenlet from the original web site and compile the source manually this is
-known to cause issues for lot of users. It is much easier to install greenlet automatically using Python
-package manager that comes with ActiveState Python.
+3. Gevent
+http://www.lfd.uci.edu/~gohlke/pythonlibs/#gevent
+Download win32-py2.7
 
-To do this you have to click:
+4. SetupTools
+http://pypi.python.org/packages/2.7/s/setuptools/setuptools-0.6c11.win32-py2.7.exe#md5=57e1e64f6b7c7f1d2eddfc9746bbaf20
 
-Start -> All Programs -> ActiveState ActivePython 2.7(32-bit) -> Python Package Manager
+5. BitHopper
+github.com/c00w/bitHopper
+Go to downloads and hit zip. Extract the zip to your desktop
 
-Console will open up and to this console you have to type:
-
-pypm install greenlet
-
-Then download and run:
-
-http://www.lfd.uci.edu/~gohlke/pythonlibs/#gevent You want the 32bit python2.7 gevent version.
-DO NOT USE GEVENT 1.0a3 1.0b1 or any other 1.0 series. They are broken. Badly.
-
-
-After pypm has finished installing greenlet successully type "exit" and your bitHopper is all set. Although
-using ActiveState Python's pypm should work 99% of the time there have been reports of people having issues
-with using it. If this is the case you could also download greenlet package from:
-
-http://www.lfd.uci.edu/~gohlke/pythonlibs/
-
-Please be aware that these are unofficial Windows binaries for Python. It is always best to either download
-greenlet source yourself and compile it or use pypm method. If you have no other way and you have to use
-these unofficial binaries then greenlet-0.3.1.win32-py2.7.exe is the correct one to download. It will
-extract itself into correct directory.
-
-
+Running bitHopper
+DoubleClick bitHopper.py
 
 # Configuring user settings
 
