--- a/README
+++ b/README
@@ -37,11 +37,14 @@ Download win32-py2.7
 4. SetupTools
 http://pypi.python.org/packages/2.7/s/setuptools/setuptools-0.6c11.win32-py2.7.exe#md5=57e1e64f6b7c7f1d2eddfc9746bbaf20
 
-5. gitpython
+5. Install Git
+http://code.google.com/p/msysgit/downloads/list?can=3
+
+6. gitpython
 http://pypi.python.org/packages/source/G/GitPython/GitPython-0.3.2.RC1.tar.gz#md5=849082fe29adc653a3621465213cab96
 extract the item and run python setup.py install
 
-6. BitHopper
+7. BitHopper
 github.com/c00w/bitHopper
 Go to downloads and hit zip. Extract the zip to your desktop
 
